--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.6",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.6.3",
+    "swagger-ui-express": "^4.1.6",
     "validator": "^13.6.0"
   }
 }
